Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107038

Non-aliased Text is rendered incorrectly using NativeRendering

    XMLWordPrintable

Details

    • f6626cf3c3 (qt/qtbase/dev) f6626cf3c3 (qt/tqtc-qtbase/dev) cba96b3a97 (qt/qtdeclarative/dev) ce97b2255a (qt/tqtc-qtbase/6.2) a8de48b144 (qt/qtbase/6.4) a422fc89a3 (qt/qtbase/6.3) cba96b3a97 (qt/tqtc-qtdeclarative/dev) 1bd0f29c05 (qt/qtdeclarative/6.4)

    Description

      Attached an example which renderes the same text using multiple sizes with Text.QtRendering and Text.NativeRendering

      With NativeRendering the antialiasing property is set to false and shows broken rendering:

      Attachments

        For Gerrit Dashboard: QTBUG-107038
        # Subject Branch Project Status CR V

        Activity

          People

            gagi Dominik Holland
            gagi Dominik Holland
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: