Fix broken Text rendering when noantialiased NativeRendering is used

In case antialiasing is disabled the QFontEngine::Format_Mono is used
to render in the glyph cache.
In this format the padding needs to be 8-bit aligned.

Fixes: QTBUG-107038
Change-Id: Icc3c69fe0395cea9954c2fa07c39e7769fc91800
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit cba96b3a97977f71931f311db9d5644d1d74d694)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>