src/gui/opengl/qopengltextureglyphcache.cpp
@@ -441,7 +441,10 @@ void QOpenGLTextureGlyphCache::fillTexture(const Coord &c, glyph_t glyph, QFixed
 
 int QOpenGLTextureGlyphCache::glyphPadding() const
 {
-    return 1;
+    if (m_format == QFontEngine::Format_Mono)
+        return 8;
+    else
+        return 1;
 }
 
 int QOpenGLTextureGlyphCache::maxTextureWidth() const
